--- a/i3/config
+++ b/i3/config
@@ -12,12 +12,13 @@
 
 # Start compton on i3 start
 exec --no-startup-id compton --config ${HOME}/.config/compton/compton.conf
-exec xrandr --output DP2 --primary
+exec ~/.settings/dock.sh
+exec --no-startup-id polybar example 
+#exec nm-applet #show wifi drop down menu in the dock
 set $mod Mod1
 
-#no title bars
+# no title bars
 new_window none
-#new_window normal 
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -102,28 +103,28 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -157,23 +158,32 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-bindsym $mod+Control+l exec i3lock
+bindsym $mod+Control+l exec ~/.settings/lock.sh 
+bindsym $mod+Control+f [class="Firefox"] focus
+bindsym $mod+Control+t [class="Gnome-terminal"] focus
+bindsym $mod+Control+s [class="Slack"] focus
+bindsym $mod+Control+m [class="Evolution"] focus
 
-assign [class="Firefox"] → 2
-assign [class="Evolution"] → 3
-assign [class="slack"] → 4
+assign [class="Firefox"] → 2:Web
+assign [class="Evolution"] → 3:Mail
+assign [class="Slack"] → 4:Comm
 
+exec gnome-terminal
 exec firefox
 exec evolution
 exec slack
 
+# rename workspace
+# bindsym Ctrl+Shift+r exec i3-input -F 'rename workspace to "%s"' -P 'rename current workspace: '
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
+#bar {
+#		position top
+#       status_command i3status
 #        tray_output primary
 #        status_command python /path/to/powerline/bindings/i3/powerline-i3.py
         #font pango:"Meslo-LG-S-DZ-Regular-for-Powerline 5"
         #font pango:Meslo\ LG\ S\ DZ\ Regular\ for\ Powerline
-        tray_output primary
-}
+#        tray_output primary
+#}
