--- a/i3/config
+++ b/i3/config
@@ -14,6 +14,7 @@
 exec --no-startup-id compton --config ${HOME}/.config/compton/compton.conf
 exec ~/.settings/dock.sh
 exec --no-startup-id polybar example 
+exec --no-startup-id feh --bg-fill ${HOME}/Pictures/wallpapers/batman.jpg
 # turn off screen after 3 minutes of activity
 exec --no-startup-id xset dpms 180 0 0
 #exec nm-applet #show wifi drop down menu in the dock
