--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@
 # Start compton on i3 start
 exec --no-startup-id compton --config ${HOME}/.config/compton/compton.conf
 exec ~/.settings/dock.sh
-exec --no-startup-id polybar example 
+exec --no-startup-id polybar example
 exec --no-startup-id feh --bg-fill ${HOME}/Pictures/wallpapers/batman.jpg
 # turn off screen after 3 minutes of activity
 exec --no-startup-id xset dpms 180 0 0
@@ -26,10 +26,13 @@ new_window none
 #go back to previous workspace with same keystroke
 workspace_auto_back_and_forth yes
 
+#default to stacked layout
+workspace_layout stacking
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 ####font pango:monospace 8
-font pango:monaco 10 
+font pango:monaco 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -52,7 +55,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run -nf '#FFFFFF' -nb '#000000' -sb '#7F18D8' -sf '#FFFFFF'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -83,7 +86,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+g split h 
+bindsym $mod+g split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -163,30 +166,40 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
+# Colours
+# class                 border  bground text    indicator child_border
+client.focused          #000000 #7F18D8 #FFFFFF #2E9EF4   #285577
+
 bindsym $mod+r mode "resize"
-bindsym $mod+Control+l exec ~/.settings/lock.sh 
+bindsym $mod+Control+l exec ~/.settings/lock.sh
 bindsym $mod+Control+f [class="Firefox"] focus
 bindsym $mod+Control+t [class="X-terminal-emulator"] focus
 bindsym $mod+Control+s [class="Slack"] focus
-bindsym $mod+Control+m [class="Evolution"] focus
+bindsym $mod+Control+m [title="mutt"] focus
 
 assign [class="Firefox"] → 2:Web
 assign [class="Evolution"] → 3:Mail
 assign [class="Slack"] → 4:Comm
+assign [title="davmail_offlineimap"] → 3:Mail
+assign [title="mutt"] → 3:Mail
 
 exec i3-sensible-terminal
 exec firefox
 exec evolution
 exec slack
 
+#mail
+exec x-terminal-emulator --title davmail_offlineimap --command="/usr/bin/zsh ~/.settings/mail.zsh"
+exec x-terminal-emulator --title mutt --command="/usr/bin/zsh -c mutt"
+
 # Shutdown, reboot, lock screen
 set $Locker i3lock && sleep 1
-set $mode_system System (l) lock, (e) logout, (r) reboot, (s) shutdown, (shift+s) suspend, (shift+h) hibernate
+set $mode_system System (l) lock, (e) logout, (r) reboot, (s) shutdown, (u) suspend, (h) hibernate
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym shitf+s exec --no-startup-id $Locker && systemctl suspend, mode "default"
-    bindsym shift-h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
+    bindsym u exec --no-startup-id $Locker && systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
     bindsym s exec --no-startup-id systemctl poweroff -i, mode "default"
 
@@ -195,18 +208,3 @@ mode "$mode_system" {
     bindsym Escape mode "default"
 }
 bindsym $mod+BackSpace mode "$mode_system"
-
-# rename workspace
-# bindsym Ctrl+Shift+r exec i3-input -F 'rename workspace to "%s"' -P 'rename current workspace: '
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#		position top
-#       status_command i3status
-#        tray_output primary
-#        status_command python /path/to/powerline/bindings/i3/powerline-i3.py
-        #font pango:"Meslo-LG-S-DZ-Regular-for-Powerline 5"
-        #font pango:Meslo\ LG\ S\ DZ\ Regular\ for\ Powerline
-#        tray_output primary
-#}
