--- a/i3/config
+++ b/i3/config
@@ -144,6 +144,10 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 1 -5%
 # mute sound
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle
+# increase brightness 
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10
+# decrease brightness 
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10
 
 assign [class="Firefox"] → 2
 assign [class="Evolution"] → 3
