--- a/i3/config
+++ b/i3/config
@@ -152,6 +152,7 @@ bindsym $mod+Control+f [class="Firefox"] focus
 bindsym $mod+Control+t [class="X-terminal-emulator"] focus
 bindsym $mod+Control+s [class="Slack"] focus
 bindsym $mod+Control+m [title="mutt"] focus
+bindsym $mod+Control+v [title="VIM$"] focus
 
 assign [class="Firefox"] → 2:Web
 assign [class="Evolution"] → 3:Mail
