--- a/i3/config
+++ b/i3/config
@@ -175,6 +175,7 @@ mode "$mode_system" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
+bindsym $mod+BackSpace mode "$mode_system"
 
 # Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
 bar {
