--- a/i3/config
+++ b/i3/config
@@ -133,7 +133,7 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-bindsym $mod+Control+l exec i3lock
+bindsym $mod+Control+l exec i3lock -c 000000
 bindsym $mod+Control+f [class="Firefox"] focus
 bindsym $mod+Control+t [class="X-terminal-emulator"] focus
 bindsym $mod+Control+s [class="Slack"] focus
