Launch polybar on each connected monitor

--- a/i3/config
+++ b/i3/config
@@ -1,4 +1,5 @@
-#exec --no-startup-id polybar example
+#start polybar
+exec ~/.settings/polybar/launch_polybar.sh
 
 #example xrandr line to configure your monitors
 #exec xrandr --output eDP1 --auto --right-of HDMI3 --output VGA1 --auto --left-of HDMI3
