--- a/i3/config
+++ b/i3/config
@@ -174,7 +174,7 @@ exec nm-applet
 
 
 # Shutdown, reboot, lock screen
-set $Locker i3lock && sleep 1
+set $Locker i3lock -c 000000 && sleep 1
 set $mode_system System (l) lock, (e) logout, (r) reboot, (s) shutdown, (u) suspend, (h) hibernate
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
