--- a/i3/config
+++ b/i3/config
@@ -78,6 +78,9 @@ bindsym $mod+e layout toggle split
 #go back to previous workspace with same keystroke
 workspace_auto_back_and_forth yes
 
+#show borders only when more than one window is visible
+hide_edge_borders smart
+
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
