--- a/i3/config
+++ b/i3/config
@@ -17,6 +17,9 @@ workspace_auto_back_and_forth yes
 #default to stacked layout
 workspace_layout stacking
 
+#show 3 pixel border around windows
+for_window [class="^.*"] border pixel 3
+
 #show borders only when more than one window is visible
 hide_edge_borders smart
 
@@ -161,6 +164,7 @@ bindsym $mod+Control+t [class="X-terminal-emulator"] focus
 bindsym $mod+Control+s [class="Slack"] focus
 bindsym $mod+Control+m [title="mutt"] focus
 bindsym $mod+Control+v [title="VIM$"] focus
+bindsym $mod+Control+p [class="Emacs"] focus
 
 assign [class="Firefox"] → 2
 assign [class="Evolution"] → 3
@@ -182,7 +186,7 @@ exec --no-startup-id polybar --reload example
 
 # Shutdown, reboot, lock screen
 # In order to make shutdown and suspend work, look up sudo visudo syntax
-set $Locker ~/.settings/lock.sh 
+set $Locker ~/.settings/lock.sh
 set $mode_system System (l) lock, (e) logout, (r) reboot, (s) shutdown, (u) suspend, (h) hibernate
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
