--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,6 +1,6 @@
 backend = "glx"
 #inactive-dim = 0.2
-
+vsync = "opengl-swc";
 blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
 blur-background-frame = true;
