--- a/polybar/config
+++ b/polybar/config
@@ -53,7 +53,7 @@ font-3 = Source Han Sans JP:size=10;1
 
 modules-left = i3
 modules-center = email
-modules-right = xbacklight volume wlan eth battery date powermenu
+modules-right = xbacklight volume wlan eth eth2 battery date powermenu
 
 tray-position = right
 tray-padding = 4
@@ -249,6 +249,22 @@ ramp-signal-foreground = ${colors.foreground-alt}
 [module/eth]
 type = internal/network
 interface = enp0s31f6
+interval = 3.0
+
+format-connected-underline = #55aa55
+format-connected-prefix = " "
+;format-connected-prefix-foreground = ${colors.foreground-alt}
+label-connected = %local_ip%
+
+format-disconnected =
+format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = %ifname% disconnected
+;label-disconnected = no eth
+label-disconnected-foreground = ${colors.foreground-alt}
+
+[module/eth2]
+type = internal/network
+interface = enxd481d7400015 
 interval = 3.0
 
 format-connected-underline = #55aa55
