--- a/i3/config
+++ b/i3/config
@@ -158,7 +158,7 @@ client.focused          #000000 #C20257 #FFFFFF #551C60   #C20257
 client.unfocused        #000000 #000000 #FFFFFF #551C60   #000000
 
 bindsym $mod+r mode "resize"
-bindsym $mod+Control+l exec ~/.settings/lock.sh
+bindsym $mod+Control+l exec ~/.settings/i3/lock.sh
 bindsym $mod+Control+f [class="Firefox"] focus
 bindsym $mod+Control+t [class="X-terminal-emulator"] focus
 bindsym $mod+Control+s [class="Slack"] focus
