--- a/i3/config
+++ b/i3/config
@@ -182,7 +182,7 @@ exec slack
 exec x-terminal-emulator --title davmail_offlineimap --command="/usr/bin/zsh ~/.settings/mail/mail.zsh"
 exec x-terminal-emulator --title mutt --command="/usr/bin/zsh -c mutt"
 # Start my custom bar at the top
-exec --no-startup-id polybar --reload example
+exec_always --no-startup-id polybar --reload example
 exec --no-startup-id /usr/bin/emacs --daemon
 
 # Shutdown, reboot, lock screen
