--- a/i3/config
+++ b/i3/config
@@ -1,14 +1,14 @@
 # Start compton on i3 start
 exec --no-startup-id compton --config ${HOME}/.settings/compton/compton.conf
 
+# use arandr to set your displays and then save the layout as display.sh
+exec ~/.screenlayout/display.sh
+
 #start polybar
-exec ~/.settings/polybar/launch_polybar.sh
+exec_always ~/.settings/polybar/launch_polybar.sh
 
 #set a random wallpaper
 exec feh --randomize --bg-fill ${HOME}/Pictures/wallpapers/*
-
-# use arandr to set your displays and then save the layout as display.sh
-exec ~/.screenlayout/display.sh
 
 #alt key is the modifier
 set $mod Mod4
@@ -195,7 +195,6 @@ exec nm-applet
 
 # start emacs as a daemon
 exec --no-startup-id /usr/bin/emacs --daemon
-
 
 # Shutdown, reboot, lock screen
 set $Locker i3lock -c 000000 && sleep 1
