--- a/spacevim/init.toml
+++ b/spacevim/init.toml
@@ -15,6 +15,8 @@
     buffer_index_type = 4
     enable_tabline_filetype_icon = true
     enable_statusline_mode = false
+    # How long to wait for after pressing space before menus show up
+    timeoutlen = 0.3
 
 # Enable autocomplete layer
 
