Add shortcut to focus emacs

--- a/i3/config
+++ b/i3/config
@@ -164,7 +164,7 @@ bindsym $mod+Control+t [class="X-terminal-emulator"] focus
 bindsym $mod+Control+s [class="Slack"] focus
 bindsym $mod+Control+m [title="mutt"] focus
 bindsym $mod+Control+v [title="VIM$"] focus
-
+bindsym $mod+Control+e [title="Emacs"] focus 
 
 # increase sound volume
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5%
