--- a/i3/config
+++ b/i3/config
@@ -6,6 +6,9 @@ exec ~/.settings/i3/dock.sh
 exec --no-startup-id xset dpms 180 0 0
 #show wifi drop down menu in dock
 #exec nm-applet
+
+# Launch gnome-settings-deamon to apply GTK theme
+exec --no-startup-id /usr/libexec/gsd-xsettings
 set $mod Mod4
 
 # no title bars
@@ -25,7 +28,7 @@ hide_edge_borders smart
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monaco 10
+font pango:System San Francisco Display 0
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
