Set default input and output audio

--- a/i3/config
+++ b/i3/config
@@ -2,10 +2,18 @@
 #exec --no-startup-id compton --config ${HOME}/.config/compton/compton.conf
 # Set multi-monitor settings
 exec ~/.settings/i3/dock.sh
+
 # turn off screen after 3 minutes of activity
 exec --no-startup-id xset dpms 180 0 0
+
 #show wifi drop down menu in dock
 #exec nm-applet
+
+#set default audio input
+pacmd "set-default-source alsa_input.pci-0000_00_1f.3.analog-stereo"
+
+#set default audio output
+pacmd "set-default-sink alsa_output.usb-Lenovo_ThinkPad_Thunderbolt_3_Dock_USB_Audio_000000000000-00.iec958-stereo"
 
 # Launch gnome-settings-deamon to apply GTK theme
 exec --no-startup-id /usr/libexec/gsd-xsettings
