--- a/i3/config
+++ b/i3/config
@@ -3,6 +3,8 @@
 # Set multi-monitor settings
 exec ~/.settings/i3/dock.sh
 
+exec ~/.custom.sh
+
 # turn off screen after 3 minutes of activity
 exec --no-startup-id xset dpms 180 0 0
 
@@ -174,14 +176,12 @@ bindsym $mod+r mode "resize"
 bindsym $mod+Control+l exec ~/.settings/i3/lock.sh
 bindsym $mod+Control+f [class="Firefox"] focus
 bindsym $mod+Control+t [class="X-terminal-emulator"] focus
-bindsym $mod+Control+s [class="Slack"] focus
 bindsym $mod+Control+m [title="mutt"] focus
 bindsym $mod+Control+v [title="VIM$"] focus
 bindsym $mod+Control+e [class="Emacs"] focus
 
 assign [class="Firefox"] → 2
 assign [class="Evolution"] → 3
-assign [class="Slack"] → 4
 assign [title="davmail_offlineimap"] → 3
 assign [title="mutt"] → 3
 #assign [class="Emacs"] → 1
@@ -189,7 +189,6 @@ assign [title="mutt"] → 3
 exec i3-sensible-terminal
 exec firefox
 exec evolution
-exec slack
 
 # Start my custom bar at the top
 exec_always --no-startup-id polybar --reload example
