--- a/i3/config
+++ b/i3/config
@@ -130,6 +130,7 @@ bindsym $mod+Shift+0 move container to workspace number 10
 
 # Popup windows floating and move to center
 for_window [window_role="pop-up"] floating enable,move absolute center
+for_window [window_role="task_dialog"] floating enable
 for_window [window_role="Open Files"] floating enable sticky
 for_window [window_role="File Operation Progress"] floating enable sticky
 for_window [window_role="Save As"] floating enable
@@ -189,6 +190,7 @@ assign [title="mutt"] → 3
 exec i3-sensible-terminal
 exec firefox
 exec evolution
+dex -s ~/.config/autostart -a
 
 # Start my custom bar at the top
 exec_always --no-startup-id polybar --reload example
